--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -7,10 +7,7 @@
   <title>title 首页</title>
 </head>
 <body>
-   <div>这是ejs的模板</div>
-    
-    <script>
-      var title = '这是一个标题'  
-    </script>
+    <div>index</div>
+    <script src="/dist/index.js"></script>
 </body>
 </html>
