--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
   <title>title 首页</title>
 </head>
 <body>
-    <div>index</div>
-    <script src="/dist/index.js"></script>
+    <div>index123</div>
+    
 </body>
 </html>
